Enhance personal description and update blog section
Added a new paragraph describing personal qualities and experiences. Updated the blog section header icon. Ensured proper formatting and structure throughout the document.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,272 @@
         I'm <strong>Vikram Aditya</strong> (<a href="https://www.linkedin.com/in/adityakumar2608/" target="_blank" rel="noopener">Aditya Kumar</a> ; 王阳明 - Wang Yangming). 
         A Engineering graduate from <strong>IIT Bombay</strong> (Class of 2024), currently working in the <strong>Founder's Office at Teachmint</strong> in Bengaluru.
       </p>
+
+      <p>
+        I define myself simply: <em>"I can think, and I have patience."</em> These two qualities have guided me through diverse experiences — from research internships at Cambridge and Tsinghua to working with startups across healthcare, agriculture, and education technology.
+      </p>
+
+      <!-- Quick Info Card -->
+      <div class="info-card">
+        <div class="info-grid">
+          <div class="info-item">
+            <span class="info-label">📍 Location</span>
+            <span class="info-value">Bengaluru, Karnataka, India</span>
+          </div>
+          <div class="info-item">
+            <span class="info-label">🎓 Education</span>
+            <span class="info-value">B.Tech, IIT Bombay '24</span>
+          </div>
+          <div class="info-item">
+            <span class="info-label">💼 Current Role</span>
+            <span class="info-value">Founder's Office @ Teachmint</span>
+          </div>
+          <div class="info-item">
+            <span class="info-label">🗣️ Languages</span>
+            <span class="info-value">English, Hindi, Japanese (Elementary)</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Professional Experience Section -->
+    <section class="fade-in">
+      <h2>Professional Experience</h2>
+
+      <div class="timeline">
+        <!-- Teachmint -->
+        <div class="timeline-item">
+          <div class="timeline-marker"></div>
+          <div class="timeline-content">
+            <div class="timeline-header">
+              <h3>Founder's Office</h3>
+              <span class="timeline-company">Teachmint</span>
+            </div>
+            <span class="timeline-date">March 2025 – Present</span>
+            <span class="timeline-location">Bengaluru, Karnataka, India</span>
+            <p>Learning the fundamentals of how a company operates from the ground up. Working directly with leadership on strategic initiatives across product, operations, and growth.</p>
+          </div>
+        </div>
+
+        <!-- Stealth Startup -->
+        <div class="timeline-item">
+          <div class="timeline-marker"></div>
+          <div class="timeline-content">
+            <div class="timeline-header">
+              <h3>Founder's Office</h3>
+              <span class="timeline-company">Healthcare Startup (Stealth)</span>
+            </div>
+            <span class="timeline-date">September 2024 – February 2025</span>
+            <p>Deep dive into the healthcare industry. Learned how hospitals function and the challenges they face — speaking with everyone from ground staff and nurses to administrators and directors. Coordinated with multiple hospitals, studying rules, regulations, and guidelines.</p>
+            <blockquote>"Learning never exhausts the mind." — da Vinci. No field is foreign, just unexplored.</blockquote>
+          </div>
+        </div>
+
+        <!-- Urban Farm -->
+        <div class="timeline-item">
+          <div class="timeline-marker"></div>
+          <div class="timeline-content">
+            <div class="timeline-header">
+              <h3>Founder's Office</h3>
+              <span class="timeline-company">Urban Farm</span>
+            </div>
+            <span class="timeline-date">May 2024 – August 2024</span>
+            <span class="timeline-location">Udaipur, Rajasthan, India</span>
+            <p>Explored the organic farming sector — understanding the market, talking to ground-level workers, and learning the importance of soil and food. Helped with strategy and operations.</p>
+            <p><em>Fell in love with Udaipur — morning dives in Fateh Sagar Lake, wandering through ancient palaces, and discovering hidden cafes around every corner.</em></p>
+          </div>
+        </div>
+
+        <!-- Department General Secretary -->
+        <div class="timeline-item">
+          <div class="timeline-marker"></div>
+          <div class="timeline-content">
+            <div class="timeline-header">
+              <h3>Department General Secretary</h3>
+              <span class="timeline-company">Civil Engineering Association, IIT Bombay</span>
+            </div>
+            <span class="timeline-date">May 2023 – June 2024</span>
+            <span class="timeline-location">Mumbai, Maharashtra, India</span>
+            <p>One of the most memorable journeys of my college life. In just 2 weeks, spoke to 1000+ students across the Civil Department — listened to their problems, noted what they wanted changed. Fought a tough election battle, and won.</p>
+            <ul>
+              <li>Led a 4-tier team of 32 members</li>
+              <li>Represented the department at multiple events</li>
+              <li>Managed ₹8.5 Lakhs annual budget</li>
+              <li>Organized everything from formal events to fun nights</li>
+            </ul>
+            <p><em>Made hundreds of memories, built lifelong friendships, and found my CEA Family :)</em></p>
+          </div>
+        </div>
+
+        <!-- Housie -->
+        <div class="timeline-item">
+          <div class="timeline-marker"></div>
+          <div class="timeline-content">
+            <div class="timeline-header">
+              <h3>Founder's Office</h3>
+              <span class="timeline-company">Housie</span>
+            </div>
+            <span class="timeline-date">December 2022 – January 2023</span>
+            <p>Worked on a one-click apartment leasing platform with virtual property tours. Contributed to virtual reality tours, one-click leasing, background checks, and finance verification. Created a 40-page patent draft detailing the platform's technical aspects.</p>
+          </div>
+        </div>
+
+        <!-- E-Cell -->
+        <div class="timeline-item">
+          <div class="timeline-marker"></div>
+          <div class="timeline-content">
+            <div class="timeline-header">
+              <h3>Marketing Coordinator</h3>
+              <span class="timeline-company">E-Cell, IIT Bombay</span>
+            </div>
+            <span class="timeline-date">May 2021 – April 2022</span>
+            <p>Joined for the freebies and parties (being honest!). The real work involved organizing data — updating spreadsheets and keeping things sorted.</p>
+          </div>
+        </div>
+
+        <!-- Class Representative -->
+        <div class="timeline-item">
+          <div class="timeline-marker"></div>
+          <div class="timeline-content">
+            <div class="timeline-header">
+              <h3>Class Representative</h3>
+              <span class="timeline-company">Civil Engineering Association, IIT Bombay</span>
+            </div>
+            <span class="timeline-date">May 2021 – April 2022</span>
+            <p>My first taste of campus politics. Talked to almost all 171 students in class for the election. Learned how to communicate with people, made some friends and (admittedly) some enemies too.</p>
+            <p>After becoming CR, saw issues from both professor and student perspectives. <em>Turns out democracy is messy, but you learn a lot!</em></p>
+          </div>
+        </div>
+
+        <!-- Chegg -->
+        <div class="timeline-item">
+          <div class="timeline-marker"></div>
+          <div class="timeline-content">
+            <div class="timeline-header">
+              <h3>Subject Matter Expert — Civil Engineering</h3>
+              <span class="timeline-company">Chegg India</span>
+            </div>
+            <span class="timeline-date">October 2021 – December 2021</span>
+            <p>Where I earned my first salary! Went in thinking I was average at civil engineering courses. Started solving questions and realized: <em>"Oh. Oh no. I'm not even average :)"</em></p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Education Section -->
+    <section class="fade-in">
+      <h2>Education</h2>
+
+      <div class="education-grid">
+        <!-- IIT Bombay -->
+        <div class="education-card">
+          <div class="education-icon">🎓</div>
+          <div class="education-content">
+            <h3>Indian Institute of Technology, Bombay</h3>
+            <p class="education-degree">Bachelor of Technology — Civil Engineering</p>
+            <span class="education-date">2020 – 2024</span>
+            <p class="education-highlight">JEE Advanced: 99.24 percentile | JEE Main: 98.96 percentile (out of 1 million candidates)</p>
+          </div>
+        </div>
+
+        <!-- Cambridge -->
+        <div class="education-card">
+          <div class="education-icon">🇬🇧</div>
+          <div class="education-content">
+            <h3>University of Cambridge</h3>
+            <p class="education-degree">Research Apprenticeship Program — Judge Business School</p>
+            <span class="education-date">August 2023 – September 2023</span>
+          </div>
+        </div>
+
+        <!-- Tsinghua -->
+        <div class="education-card">
+          <div class="education-icon">🇨🇳</div>
+          <div class="education-content">
+            <h3>Tsinghua University</h3>
+            <p class="education-degree">Global Summer Program</p>
+            <span class="education-date">June 2023 – July 2023</span>
+          </div>
+        </div>
+
+        <!-- IIT Gandhinagar -->
+        <div class="education-card">
+          <div class="education-icon">💡</div>
+          <div class="education-content">
+            <h3>IIT Gandhinagar — Invention Factory</h3>
+            <p class="education-degree">Research Internship</p>
+            <span class="education-date">May 2022 – July 2022</span>
+            <p class="education-highlight">Selected among students from all IITs to conceive inventions, build prototypes, pitch ideas, and file patents.</p>
+          </div>
+        </div>
+
+        <!-- USU Indonesia -->
+        <div class="education-card">
+          <div class="education-icon">🇮🇩</div>
+          <div class="education-content">
+            <h3>Universitas Sumatera Utara</h3>
+            <p class="education-degree">International Virtual Summer Course — Management Study Program</p>
+            <span class="education-date">August 2022 – September 2022</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Skills & Interests Section -->
+    <section class="fade-in">
+      <h2>Skills & Interests</h2>
+
+      <div class="grid-2">
+        <div class="card">
+          <h3><span class="icon">💼</span> Professional Skills</h3>
+          <ul class="skill-list">
+            <li>Team Management & Leadership</li>
+            <li>Strategic Planning & Operations</li>
+            <li>Finance & Budgeting</li>
+            <li>Event Planning & Execution</li>
+            <li>Market Research & Analysis</li>
+            <li>Stakeholder Communication</li>
+          </ul>
+        </div>
+
+        <div class="card">
+          <h3><span class="icon">🏆</span> Achievements</h3>
+          <ul class="skill-list">
+            <li>99.24 percentile in JEE Advanced 2020</li>
+            <li>1st Rank in School — Academic Excellence Award</li>
+            <li>Patent Filed: Self-sealing Biomedical Bin</li>
+            <li>Led 32-member team as Dept. General Secretary</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <!-- Certifications Section -->
+    <section class="fade-in">
+      <h2>Certifications</h2>
+
+      <div class="cert-grid">
+        <div class="cert-item">
+          <span class="cert-icon">📊</span>
+          <span class="cert-name">Investment Banking Job Simulation — Citi</span>
+        </div>
+        <div class="cert-item">
+          <span class="cert-icon">💰</span>
+          <span class="cert-name">Introduction to Finance</span>
+        </div>
+        <div class="cert-item">
+          <span class="cert-icon">📈</span>
+          <span class="cert-name">Data Analytics using Excel</span>
+        </div>
+        <div class="cert-item">
+          <span class="cert-icon">📑</span>
+          <span class="cert-name">Reading Financial Statements</span>
+        </div>
+        <div class="cert-item">
+          <span class="cert-icon">📝</span>
+          <span class="cert-name">LaTeX Document Preparation</span>
+        </div>
+      </div>
     </section>
 
     <!-- Journey Section -->
@@ -184,7 +450,7 @@
         </div>
 
         <div class="card">
-          <h3><span class="icon">✍️</span> Blog</h3>
+          <h3><span class="icon">✏️</span> Blog</h3>
           <p>Thoughts, insights, and lessons from books, podcasts, and life experiences.</p>
           <a href="blog.html" class="card-link">Read the blog</a>
         </div>
