Rearrange profile information in index.html

--- a/index.html
+++ b/index.html
@@ -369,13 +369,13 @@
           <summary>
             <div class="profile-summary">
               <div class="profile-logo">
-                <!-- Add your logo: <img src="images/logos/iitb.png" alt="IIT Bombay"> -->
+                <!-- Add your logo: <img src="" alt="IIT Bombay"> -https://upload.wikimedia.org/wikipedia/en/thumb/1/1d/Indian_Institute_of_Technology_Bombay_Logo.svg/1200px-Indian_Institute_of_Technology_Bombay_Logo.svg.png->
                 <span class="logo-placeholder">I</span>
               </div>
               <div class="profile-info">
-                <strong>Bachelor of Technology — Civil Engineering</strong>
-                <span class="profile-company">Indian Institute of Technology, Bombay</span>
-                <span class="profile-meta">2020 – 2024 · CPI: 8.12</span>
+                <strong>Indian Institute of Technology, Bombay</strong>
+                <span class="profile-company">Bachelor of Technology — Civil Engineering</span>
+                <span class="profile-meta">2020 – 2024</span>
               </div>
             </div>
           </summary>
