Fix logo image source in profile box
Updated logo image source URL in index.html.

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
           <summary>
             <div class="profile-summary">
               <div class="profile-logo">
-                <!-- Add your logo: <img src="" alt="IIT Bombay"> -https://upload.wikimedia.org/wikipedia/en/thumb/1/1d/Indian_Institute_of_Technology_Bombay_Logo.svg/1200px-Indian_Institute_of_Technology_Bombay_Logo.svg.png->
+               <!-- Add your logo: <img src="https://upload.wikimedia.org/wikipedia/en/1/1d/Indian_Institute_of_Technology_Bombay_Logo.svg" alt="IIT Bombay"> -->
                 <span class="logo-placeholder">I</span>
               </div>
               <div class="profile-info">
